form alignment problem solved

--- a/product-landing-page.css
+++ b/product-landing-page.css
@@ -1,96 +1,7 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-body {
-  background-color: black;
-  font-family: 'Metamorphous', sans-serif;
-  color: white;
-}
-
-#header-img {max-height: 150px;}
-#page-wrapper {
-  position: relative;
-}
-
-li {
-  list-style: none;
-}
-
-a {
-  color: #000;
-  text-decoration: none;
-}
-
-/** global classes styling **/
-
-.container {
-  max-width: 1000px;
-  width: 100%;
-  margin: 0 auto;
-}
-
-.btn {
-  padding: 0 20px;
-  height: 40px;
-  font-size: 1em;
-  font-weight: 900;
-  text-transform: uppercase;
-  border: 3px black solid;
-  border-radius: 2px;
-  background: transparent;
-  cursor: pointer;
-}
-
-.grid {
-  display: flex;
-}
-
-// navigation bar
-
-header {
-  position: fixed;
-  top: 0;
-  min-height: 75px;
-  padding: 0px 20px;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  background-color: #eee;
-  @media (max-width: 600px) {
-    flex-wrap: wrap;
-  }
-}
-
-.logo {
-  width: 60vw;
-
-  @media (max-width: 650px) {
-    margin-top: 15px;
-    width: 100%;
-    position: relative;
-  }
-
-  img {
-    width: 100%;
-    height: 100%;
-    max-width: 300px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    margin-left: 20px;
-    @media (max-width: 650px) {
-      margin: 0 auto;
-    }
-  }
-}
 
 nav {
   font-weight: 400;
-
+  
   @media (max-width: 650px) {
     margin-top: 10px;
     width: 100%;
@@ -99,196 +10,160 @@ nav {
     align-items: center;
     text-align: center;
     padding: 0 50px;
-
+    
     li {
-     padding-bottom: 5px;
+     padding-bottom: 5px; 
     }
-  }
-
-  ul {
+    
+     ul {
     width: 35vw;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-
+    
     @media (max-width: 650px) {
       flex-direction: column;
     }
   }
-}
+  
+    .logo 
 
-// hero
-
-#hero {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-  height: 200px;
-  margin-top: 50px;
-  h2 {
-    margin-bottom: 20px;
-    word-wrap: break-word;
-  }
-
-  input[type="email"] {
-    max-width: 275px;
-    width: 100%;
-    padding: 5px;
-  }
-
-  input[type="submit"] {
-    max-width: 150px;
-    width: 100%;
-    height: 30px;
-    margin: 15px 0;
-    border: 0;
-    background-color: #f1c40f;
-
-    &:hover {
-      background-color: orange;
-      transition: background-color 1s;
-    }
-  }
-
-  @media (max-width: 650px) {
-    margin-top: 120px;
   }
 }
-
-// features
-
-#quality-assurance {
-  margin-top: 30px;
-  .icon {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 125px;
-    width: 20vw;
-    color: darkorange;
-
-    @media (max-width: 550px) {
-      display: none;
-    }
-  }
-
-  .desc {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    height: 125px;
-    width: 80vw;
-    padding: 5px;
-
-    @media (max-width: 550px) {
-      width: 100%;
-      text-align: center;
-      padding: 0;
-      height: 150px;
-    }
-  }
-
+.body {background-color: black;
+  color: white;
+  font-family: 'Metamorphous', sans-serif;
+  margin: 0;
+  padding-top: 50px;
+    display: grid;
+  grid-template-columns: 1fr;
+  grid-column: 1 / 2;
   @media (max-width: 650px) {
     margin-top: 0;
   }
 }
 
-// how it works
+header {background-color: white;
+position: fixed;
+display: flex;
+width: 100%;
+min-height: 75px;
+  max-height: 150px;
+padding: 0px 20px;
+top: 0;
+left: 0;
+justify-content: space-around;
+align-items: center;
+  @media (max-width: 600px)
+    flex-wrap: wrap;}
 
-#how-it-works {
-  margin-top: 50px;
-  display: flex;
-  justify-content: center;
+h1 {text-align: center;
+text-decoration: underline;
+  font-size: 3em;}
 
-  iframe {
-    max-width: 560px;
-    width: 100%;
-  }
+p {padding-left: 50px;
+padding-right: 50px;
+margin-left: auto;
+  margin-right: auto;
 }
 
-// pricing
+#header-img {
+      height: 80px;
+      width: 40%;
 
-#pricing {
-  margin-top: 60px;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-
-  #tenor, #bass, #valve {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-    width: calc(100%  / 3);
-    margin: 10px;
-    border: 1px solid #000;
-    border-radius: 3px;
-
-    .level {
-      background-color: #ddd;
-      color: black;
-      padding: 15px 0;
-      width: 100%;
-      text-transform: uppercase;
-      font-weight: 700;
-    }
-
-    h2 {
-      margin-top: 15px;
-    }
-
-    ol {
-      margin: 15px 0;
-
-      li { padding: 5px 0; }
-    }
-
-    button {
-      border: 0;
-      margin: 15px 0;
-      background-color: #f1c40f;
-      font-weight: 400;
-
-      &:hover {
-        background-color: orange;
-        transition: background-color 1s;
-      }
-    }
-  }
-
-  @media (max-width: 800px) {
-    flex-direction: column;
-
-    #tenor, #bass, #valve { max-width: 300px; width: 100%; margin: 0 auto; margin-bottom: 10px; }
-  }
 }
 
-// footer
+#ul {display: flex;}
+#title {padding-top: 40px;
+line-height: 200%;}
 
-footer {
-  margin-top: 30px;
-  background-color: #ddd;
-  padding: 20px;
+#wizards-chillin {display: block; 
+  margin-left: auto; 
+  margin-right: auto;
+border-radius: 40px;}
 
-  ul {
-    display: flex;
-    justify-content: flex-end;
+.btn {
+  display: block and margin:0 auto;
+  padding: 0 20px;
+  height: 40px;
+  font-size: 1em;
+  font-weight: 900;
+  text-transform: uppercase;
+  border: 3px black solid;
+  border-radius: 20px;
+  background: white;
+  cursor: pointer;
+}
 
-    li {
-      padding: 0 10px;
-    }
-  }
-
-  span {
-    margin-top: 5px;
-    display: flex;
-    justify-content: flex-end;
-    font-size: 0.9em;
-    color: #444;
-  }
-
-  #video {margin-left: auto;
+.container {display: block; 
+  margin-left: auto; 
   margin-right: auto;}
+
+.feature {padding-top: 50px;
+padding-bottom: 50px;}
+
+#lead-capture {
+  margin-left: auto;
+  margin-right: auto;
+}
+   
+#form {
+  display: block; 
+  margin-left: auto; 
+  margin-right: auto; 
+  padding-top: 60px; 
+  padding-bottom: 60px;
+  text-align: center;
+}
+
+#gandalf-white-staff {
+  display: block;
+margin-left: auto;
+margin-right: auto;
+  
+  margin-bottom: 100px;
+}
+.margin {margin-bottom: 60px;}
+hr {
+width: 75%;
+margin-left: auto;
+margin-right: auto;
+  color: white;
+background-color: white;
+  height: 2px;
+}
+
+#section-2 {width: 1200px;
+    margin: 0px auto -1px auto;
+  padding: 15px;}
+  
+.inside-content {
+  display: inline-block;
+}
+
+#testimony-parent-div {display: block;}
+  
+#gandalf-testimony {display: block;
+float: left;
+padding-left: 10%;
+padding-right: 3%;}
+
+#testimony-text {
+  padding-right: 30%;
+  padding-top: 4%;
+}
+
+ 
+
+
+#video {display: block; 
+  margin-left: auto; 
+  margin-right: auto;
+}
+
+#footer {background-color: white;
+color: black;
+  max-height: 100px;
+  width: 100%;
+  margin: 0 auto;
 }
